[package]
name = "reduction_react"
version = "0.2.0"
edition = "2021"
authors = ["Kanari <iovo7c@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
indicatif = "0.16"
thiserror = "1.0"
zip = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
